--- a/templates/register.html
+++ b/templates/register.html
@@ -3,8 +3,141 @@
 <head>
     <meta charset="UTF-8">
     <title>注册账号</title>
+    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/mystyle.css">
 </head>
 <body>
 
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <form novalidate autocomplete="off" action="/reg/" method="post" class="form-horizontal reg-form"
+                  enctype="multipart/form-data">
+                {% csrf_token %}
+
+                <div class="form-group">
+                    <label for="{{ form_obj.username.id_for_label }}"
+                           class="col-sm-2 control-label">{{ form_obj.username.label }}</label>
+                    <div class="col-sm-8">
+                        {{ form_obj.username }}
+                        <span class="help-block">{{ form_obj.username.errors.0 }}</span>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="{{ form_obj.password.id_for_label }}"
+                           class="col-sm-2 control-label">{{ form_obj.password.label }}</label>
+                    <div class="col-sm-8">
+                        {{ form_obj.password }}
+                        <span class="help-block">{{ form_obj.password.errors.0 }}</span>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="{{ form_obj.re_password.id_for_label }}"
+                           class="col-sm-2 control-label">{{ form_obj.re_password.label }}</label>
+                    <div class="col-sm-8">
+                        {{ form_obj.re_password }}
+                        <span class="help-block">{{ form_obj.re_password.errors.0 }}</span>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="{{ form_obj.email.id_for_label }}"
+                           class="col-sm-2 control-label">{{ form_obj.email.label }}</label>
+                    <div class="col-sm-8">
+                        {{ form_obj.email }}
+                        <span class="help-block">{{ form_obj.email.errors.0 }}</span>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label
+                            class="col-sm-2 control-label">头像</label>
+                    <div class="col-sm-8">
+                        <label for="id_avatar"><img id="avatar-img" src="/static/img/default.png" alt=""></label>
+                        <input accept="image/*" type="file" name="avatar" id="id_avatar" style="display: none">
+                        <span class="help-block"></span>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <button type="button" class="btn btn-success" id="reg-submit">注册</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+
+<script src="/static/jquery-3.3.1.js"></script>
+<script src="/static/bootstrap/js/bootstrap.min.js"></script>
+<script>
+    // 找到头像的input标签绑定change事件
+    $("#id_avatar").change(function () {
+        var fileReader = new FileReader();   // 创建一个读取文件的对象
+        fileReader.readAsDataURL(this.files[0]);  // 读取文件中
+        fileReader.onload = function () {
+            $("#avatar-img").attr("src", fileReader.result);  // 上一步完成后才把图片加载到img标签中
+        };
+    });
+
+    // ajax提交注册的数据
+    $("#reg-submit").click(function () {
+        // 提取用户填写的注册数据，向后端发送ajax请求
+        var formData = new FormData();
+        formData.append("username", $("#id_username").val());
+        formData.append("password", $("#id_password").val());
+        formData.append("re_password", $("#id_re_password").val());
+        formData.append("email", $("#id_email").val());
+        formData.append("avatar", $("#id_avatar")[0].files[0]);
+        formData.append("csrfmiddlewaretoken", $("#id_csrfmiddlewaretoken").val());
+
+        $.ajax({
+            url: "/reg/",
+            type: "post",
+            processData: false,  // 告诉jQuery不要处理数据
+            contentData: false,  // 告诉jQuery不要设置content类型
+            data: formData,
+            success: function (data) {
+                if (data.status) {
+                    // 将错误信息展示到页面上
+                    $.each(data.msg, function (k, v) {
+                        $("#id_" + k).next("span").text(v[0]).parent().parent().addClass("has_error");
+                    })
+                } else {
+                    // 没有错误就跳转到指定页面
+                    location.href = data.msg;
+                }
+            }
+        })
+    });
+
+    // 将所有的input框绑定获取焦点的时间，将所有的错误信息清空
+    $("form input").focus(function () {
+        $(this).next().text("").parent().parent().removeClass("has_error");
+    });
+    // 给username input框绑定一个失去焦点的事件。失去焦点之后就校验用户名是否已被注册
+    $("#id_username").on("input", function () {
+        var username = $(this).val();  // 取到用户填写的值
+
+        // 发请求
+        $.ajax({
+            url: "/check_username_exist/",
+            type: "get",
+            data: {"username": username},
+            success: function (data) {
+                if (data.status) {
+                    // 用户名已被注册
+                    $("#id_username").next().text(data.msg).parent().parent().addClass("has_error");
+                }
+            }
+        })
+    })
+
+
+</script>
 </body>
 </html>
