--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
         <!--收集导航链接，表单和其它内容以进行切换-->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Link <span class="sr-only">(current)</span> </a></li>
+                <li class="active"><a href="#">Link <span class="sr-only">{{ current }}</span> </a></li>
                 <li><a href="#">Link</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
