--- a/templates/register.html
+++ b/templates/register.html
@@ -93,7 +93,7 @@
         formData.append("re_password", $("#id_re_password").val());
         formData.append("email", $("#id_email").val());
         formData.append("avatar", $("#id_avatar")[0].files[0]);
-        formData.append("csrfmiddlewaretoken", $("#id_csrfmiddlewaretoken").val());
+        formData.append("csrfmiddlewaretoken", $("[name='csrfmiddlewaretoken']").val());
 
         $.ajax({
             url: "/reg/",
@@ -105,7 +105,7 @@
                 if (data.status) {
                     // 将错误信息展示到页面上
                     $.each(data.msg, function (k, v) {
-                        $("#id_" + k).next("span").text(v[0]).parent().parent().addClass("has_error");
+                        $("#id_" + k).next("span").text(v[0]).parent().parent().addClass("has-error");
                     })
                 } else {
                     // 没有错误就跳转到指定页面
@@ -117,7 +117,7 @@
 
     // 将所有的input框绑定获取焦点的时间，将所有的错误信息清空
     $("form input").focus(function () {
-        $(this).next().text("").parent().parent().removeClass("has_error");
+        $(this).next().text("").parent().parent().removeClass("has-error");
     });
     // 给username input框绑定一个失去焦点的事件。失去焦点之后就校验用户名是否已被注册
     $("#id_username").on("input", function () {
@@ -131,7 +131,7 @@
             success: function (data) {
                 if (data.status) {
                     // 用户名已被注册
-                    $("#id_username").next().text(data.msg).parent().parent().addClass("has_error");
+                    $("#id_username").next().text(data.msg).parent().parent().addClass("has-error");
                 }
             }
         })
