--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">The Blog</a>
+            <a class="navbar-brand" href="#">博客</a>
         </div>
         <!--收集导航链接，表单和其它内容以进行切换-->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
