--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/fontawesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/static/mystyle.css">
+    <link rel="shortcut icon" href="#"/>
 </head>
 <body>
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
+        <!--分组以便移动端更好显示-->
         <div class="navbar-header">
-            <!--分组以便移动端更好显示-->
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
@@ -21,11 +22,12 @@
             </button>
             <a class="navbar-brand" href="#">博客</a>
         </div>
+
         <!--收集导航链接，表单和其它内容以进行切换-->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Link <span class="sr-only">{{ current }}</span> </a></li>
-                <li><a href="#">Link</a></li>
+                <li class="active"><a href="#">链接一<span class="sr-only">(current)</span></a></li>
+                <li><a href="#">链接二</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if request.user.username %}
@@ -34,9 +36,10 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false">个人中心<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
+                            <li><a href="#">第一个菜单</a></li>
+                            <li><a href="#">第二个菜单</a></li>
+                            <li><a href="#">第三个菜单</a></li>
+                            <li role="separator" class="divider"></li>
                             <li><a href="/logout/">注销</a></li>
                         </ul>
                     </li>
@@ -55,16 +58,20 @@
     <div class="row">
         <div class="col-md-2">
             <div class="panel panel-primary">
-                <div class="panel-heading">左侧广告栏一</div>
-                <div class="panel-body">Panel content</div>
+                <div class="panel-heading">左侧广告位一</div>
+                <div class="panel-body">
+                    面板内容
+                </div>
             </div>
             <div class="panel panel-info">
-                <div class="panel-heading">左侧广告栏二</div>
-                <div class="panel-body">Panel content</div>
+                <div class="panel-heading">左侧广告位二</div>
+                <div class="panel-body">
+                    面板内容
+                </div>
             </div>
         </div>
         <div class="col-md-8">
-            <!-- 文章列表 -->
+            <!-- 文章列表 开始 -->
             <div class="article-list">
                 {% for article in article_list %}
                     <div class="article">
@@ -79,30 +86,37 @@
                                 </a>
                             </div>
                             <div class="media-body">
-                                <p>{{ article.desc }}</p>
+                                <p>{{ article.desc|safe }}</p>
                             </div>
                         </div>
                         <div class="article-footer">
-                            <span><a href="/blog/{{ article.user.username }}/">{{ article.user.username }}</a> </span>发布于
+                            <span><a href="/blog/{{ article.user.username }}/">{{ article.user.username }}</a></span>发布于
                             <span>{{ article.create_time|date:'Y-m-d H:i:s' }}</span>
                             <span><i class="fa fa-commenting-o fa-fw"
-                                     aria-hidden="true">评论({{ article.comment_count }}</i> </span>
-                            <span><i class="fa fa-commenting-o-up fa-fw"
-                                     aria-hidden="true">点赞({{ article.up_count }})</i> </span>
+                                     aria-hidden="true"></i>评论({{ article.comment_count }})</span>
+                            <span><i class="fa fa-thumbs-o-up fa-fw"
+                                     aria-hidden="true"></i>点赞({{ article.up_count }})</span>
                         </div>
                         <hr>
                     </div>
                 {% endfor %}
-            </div> <!-- 文章列表结束 -->
+
+            </div>
+            <!-- 文章列表 结束-->
+
         </div>
         <div class="col-md-2">
             <div class="panel panel-primary">
                 <div class="panel-heading">右侧广告位一</div>
-                <div class="panel-body">Panel content</div>
+                <div class="panel-body">
+                    面板内容
+                </div>
             </div>
             <div class="panel panel-info">
-                <div class="panel-heading">右侧广告位一</div>
-                <div class="panel-body">Panel content</div>
+                <div class="panel-heading">右侧广告位二</div>
+                <div class="panel-body">
+                    面板内容
+                </div>
             </div>
         </div>
     </div>
